# picodemo

./: .envrc  .gitignore  CMakeLists.txt  README.md  main.c  shell.nix
